--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ FPGA_CPUGarage/*/*.bak
 modelsim/vsim.wlf
 modelsim/transcript
 FPGA_CPUGarage/output_files/*
+FPGA_CPUGarage/CPU_GARAGE.qws 
 FPGA_CPUGarage/db/CPU_GARAGE.asm.qmsg
 FPGA_CPUGarage/db/CPU_GARAGE.restore.qmsg
 FPGA_CPUGarage/db/CPU_GARAGE.sld_design_entry_dsc.sci
